init sts output work, introduce index ranges for series, fix anospp affiliation column name

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -40,6 +40,9 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # exclude empty series\n",
+    "    # SERIES\n",
+    "    df = validate_series(df)\n",
     "    df = remove_trailing_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
@@ -53,9 +56,6 @@
     "    # check columns in order of appearance\n",
     "    \n",
     "    # orange cols\n",
-    "    # exclude empty series\n",
-    "    # SERIES\n",
-    "    df = validate_series(df)\n",
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
     "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
     "    # check and exclude blanks\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20221116_kajo_resub/KAJO_Anopheles_Metadata_Manifest_V4.0.xlsx'\n",
+    "fn = '../results/20221216_anospp/Anopheles_Metadata_Manifest_V4.0-Ifakara-Tanzania15122022.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
