--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2ed8b533",
    "metadata": {},
    "outputs": [],
@@ -13,83 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "230f6339",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO] # started validate_bioscan_partner_manifest_v.2.0\n",
-      "[WARNING] # manifest ../data/BIOSCAN_Manifest_V2.0_20221017.xlsx\n",
-      "[INFO] reading data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
-      "[INFO] reading data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
-      "[INFO] checking manifest columns against template\n",
-      "[INFO] extracting value validation data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
-      "[INFO] validating SERIES\n",
-      "[INFO] validating freetext chars in CATCH_LOT\n",
-      "[INFO] validating RACK_OR_PLATE_ID and TUBE_OR_WELL_ID\n",
-      "[WARNING] found PLATE_ONLY plate SANG_001, expanding to well-level\n",
-      "[INFO] found 288 samples across 3 plates\n",
-      "[INFO] Checking and excluding blank samples\n",
-      "[WARNING] 14 blanks located across 3 plates, 274 samples of 288 left for downstream analysis\n",
-      "[INFO] validating values in column 'ORGANISM_PART'\n",
-      "[INFO] validating values in column 'PRESERVATIVE_SOLUTION'\n",
-      "[INFO] validating values in column 'BOTTLE_DIRECTION'\n",
-      "[INFO] validating date column 'DATE_OF_COLLECTION'\n",
-      "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_COLLECTION'\n",
-      "[INFO] validating country with coordinates\n",
-      "[INFO] validating time column 'TIME_OF_COLLECTION'\n",
-      "[INFO] validating time period column 'DURATION_OF_COLLECTION'\n",
-      "[INFO] excluding 0 ['NOT_COLLECTED'] samples without data in 'DURATION_OF_COLLECTION'\n",
-      "[INFO] validating values in column 'COLLECTION_METHOD'\n",
-      "[INFO] validating date column 'DATE_OF_PLATING'\n",
-      "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_PLATING'\n",
-      "[INFO] checking that DATE_OF_COLLECTION are earlier than DATE_OF_PLATING\n",
-      "[INFO] validating taxonomy against NCBI\n",
-      "[INFO] validating PREDICTED_ORDER_OR_GROUP against NCBI\n",
-      "[INFO] validating PREDICTED_FAMILY against NCBI\n",
-      "[WARNING] family: found unexpected rank for Ichneumonoidea (taxid 7401): superfamily\n",
-      "[WARNING] family: found unexpected rank for Nematocera (taxid 7148): suborder\n",
-      "[WARNING] family: found unexpected rank for Sciaroidea (taxid 41830): superfamily\n",
-      "[INFO] validating PREDICTED_GENUS against NCBI\n",
-      "[INFO] validating PREDICTED_SCIENTIFIC_NAME against NCBI\n",
-      "[INFO] validating values in column 'SPECIMEN_IDENTITY_RISK'\n",
-      "[INFO] excluding 271 [''] samples without data in 'SPECIMEN_IDENTITY_RISK'\n",
-      "[INFO] validating SPECIMEN_IDENTITY_RISK\n",
-      "[INFO] validating values in column 'LIFESTAGE'\n",
-      "[INFO] excluding 274 [''] samples without data in 'LIFESTAGE'\n",
-      "[INFO] validating values in column 'SEX'\n",
-      "[INFO] excluding 265 [''] samples without data in 'SEX'\n",
-      "[INFO] validating values in column 'SORTING_SOLUTION_USED'\n",
-      "[INFO] validating values in column 'CATCH_BOTTLE_TEMPERATURE_STORAGE'\n",
-      "[INFO] validating values in column 'PLATE_TEMPERATURE_STORAGE'\n",
-      "[INFO] validating freetext chars in MORPHOSPECIES_DESCRIPTION\n",
-      "[INFO] excluding 265 [''] samples without data in 'MORPHOSPECIES_DESCRIPTION'\n",
-      "[INFO] validating freetext chars in DESCRIPTION_OF_COLLECTION_METHOD\n",
-      "[INFO] excluding 84 [''] samples without data in 'DESCRIPTION_OF_COLLECTION_METHOD'\n",
-      "[INFO] validating freetext chars in HABITAT\n",
-      "[INFO] excluding 14 [''] samples without data in 'HABITAT'\n",
-      "[INFO] validating freetext chars in PRESERVATION_APPROACH\n",
-      "[INFO] excluding 218 [''] samples without data in 'PRESERVATION_APPROACH'\n",
-      "[INFO] validating freetext chars in COLLECTOR_SAMPLE_ID\n",
-      "[INFO] excluding 267 [''] samples without data in 'COLLECTOR_SAMPLE_ID'\n",
-      "[INFO] validating freetext chars in VOUCHER_ID\n",
-      "[INFO] excluding 286 [''] samples without data in 'VOUCHER_ID'\n",
-      "[INFO] validating numeric format in ELEVATION\n",
-      "[INFO] excluding 288 [''] samples without data in 'ELEVATION'\n",
-      "[INFO] validating freetext chars in OTHER_INFORMATION\n",
-      "[INFO] excluding 286 [''] samples without data in 'OTHER_INFORMATION'\n",
-      "[INFO] validating freetext chars in MISC_METADATA\n",
-      "[INFO] excluding 288 [''] samples without data in 'MISC_METADATA'\n",
-      "[INFO] validating contributors in '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
-      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0]. Removing for validation\n",
-      "[WARNING] suspect template contributor was not removed\n",
-      "[INFO] # ended validate_bioscan_partner_manifest_v.2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
     "                     verbose=False, version='2.0', \n",
@@ -106,6 +33,8 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # exclude empty series\n",
+    "    df = validate_series(df)\n",
     "    df = remove_trailing_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
@@ -117,8 +46,6 @@
     "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 4 DO NOT EDIT - Data Valida')\n",
     "\n",
     "    # orange cols\n",
-    "    # exclude empty series\n",
-    "    df = validate_series(df)\n",
     "    validate_freetext('CATCH_LOT', df, na_values=[])\n",
     "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
     "    # check and exclude blanks\n",
@@ -163,7 +90,9 @@
     "    # IDENTIFIED_BY not checked\n",
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
-    "    validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
+    "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
+    "    \n",
+    "    df = add_sts_cols(df, contrib_df)\n",
     "        \n",
     "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(version))\n",
     "\n",
@@ -178,22 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "597705bb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Setup complete",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_52182/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mException\u001b[0m: Setup complete"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raise Exception('Setup complete')"
    ]
@@ -213,6 +130,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e100a8f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05b5b9f4",
    "metadata": {},
    "outputs": [],
    "source": []
