--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -94,12 +94,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def validate_series(df):\n",
+    "    \n",
+    "    # series should be 1,2, ..., nsamples\n",
+    "    logging.info('validating SERIES')\n",
+    "    \n",
+    "    if df.index.duplicated().any():\n",
+    "        logging.error('duplicate SERIES: {}'.format(df.index[df.index.duplicated()].to_list()))\n",
+    "    \n",
+    "    # exclude non-numeric SERIES - these don't work with ranges\n",
+    "    series_numeric = df.index.astype(str).str.isnumeric()\n",
+    "    if not series_numeric.all():\n",
+    "        logging.error(f'Found and excluded non-numeric SERIES: {df.index[~series_numeric].to_list()}')\n",
+    "        df = df.loc[series_numeric]\n",
+    "        \n",
+    "    # check the remaining SERIES are continuous\n",
+    "    expected_series = set([str(i) for i in range(1, df.shape[0] + 1)])\n",
+    "    observed_series = set(df.index.astype(str))\n",
+    "    if expected_series != observed_series:\n",
+    "        logging.error(f'In SERIES, {sorted(list(expected_series - observed_series))} are missing, '\n",
+    "                      f'{sorted(list(observed_series - expected_series))} are unexpected')\n",
+    "        \n",
+    "    return df\n",
+    "        \n",
+    "df = validate_series(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def index_ranges(df):\n",
+    "    # based on https://stackoverflow.com/questions/4628333/converting-a-list-of-integers-into-range-in-python\n",
+    "    i = df.index.to_list()\n",
+    "    ranges = []\n",
+    "    for a, b in itertools.groupby(enumerate(i), lambda pair: pair[1] - pair[0]):\n",
+    "        b = list(b)\n",
+    "        if b[0][1] != b[-1][1]:\n",
+    "            ranges.append(f'{b[0][1]}-{b[-1][1]}')\n",
+    "        else:\n",
+    "            ranges.append(f'{b[0][1]}')\n",
+    "    return ', '.join(ranges)\n",
+    "index_ranges(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def remove_trailing_spaces(df):\n",
     "    for col in df.columns:\n",
     "        trailing_spaces = (df[col].str.startswith(' ') | df[col].str.endswith(' '))\n",
     "        if trailing_spaces.any():\n",
     "            logging.warning('trailing spaces found in column {!r}, SERIES {}. Removing for validation'.format(col,\n",
-    "                df.loc[trailing_spaces].index.to_list()))\n",
+    "                index_ranges(df.loc[trailing_spaces])))\n",
     "            df[col] = df[col].str.strip()\n",
     "            \n",
     "    return df\n",
@@ -170,38 +222,6 @@
     "    return series\n",
     "    \n",
     "exclude_missing(df['TIME_OF_COLLECTION'], na_values=['NOT_COLLECTED',''])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate_series(df):\n",
-    "    \n",
-    "    # series should be 1,2, ..., nsamples\n",
-    "    logging.info('validating SERIES')\n",
-    "    \n",
-    "    if df.index.duplicated().any():\n",
-    "        logging.error('duplicate SERIES: {}'.format(df.index[df.index.duplicated()].to_list()))\n",
-    "    \n",
-    "    # exclude non-numeric SERIES\n",
-    "    series_numeric = df.index.astype(str).str.isnumeric()\n",
-    "    if not series_numeric.all():\n",
-    "        logging.error(f'Found and excluded non-numeric SERIES: {df.index[~series_numeric].to_list()}')\n",
-    "        df = df.loc[series_numeric]\n",
-    "        \n",
-    "    # check the remaining SERIES are continuous\n",
-    "    expected_series = set([str(i) for i in range(1, df.shape[0] + 1)])\n",
-    "    observed_series = set(df.index.astype(str))\n",
-    "    if expected_series != observed_series:\n",
-    "        logging.error(f'In SERIES, {sorted(list(expected_series - observed_series))} are missing, '\n",
-    "                      f'{sorted(list(observed_series - expected_series))} are unexpected')\n",
-    "        \n",
-    "    return df\n",
-    "        \n",
-    "df = validate_series(df)"
    ]
   },
   {
@@ -291,7 +311,7 @@
     "        logging.error('last well H12 is not blank at SERIES {}: in ORGANISM_PART, '\n",
     "                      'expected \"NOT_APPLICABLE\", found {}. '\n",
     "                      'These samples will be included in further analysis.'.format(\n",
-    "                        non_blank_last_well_df.index.to_list(),\n",
+    "                        index_ranges(non_blank_last_well_df),\n",
     "                        non_blank_last_well_df.ORGANISM_PART.to_list()\n",
     "        ))\n",
     "    \n",
@@ -387,7 +407,7 @@
     "    old_dates = (valid_date_series < datetime.datetime.strptime('1900-01-01', '%Y-%m-%d'))\n",
     "    if old_dates.any():\n",
     "        logging.error(\"pre-1900 dates in {!r}: {}\".format(col,\n",
-    "            valid_date_series[old_dates].to_list())) \n",
+    "            valid_date_series[old_dates].to_list()))\n",
     "    \n",
     "    return valid_date_series\n",
     "validate_date('DATE_OF_COLLECTION', df, na_values=[])"
@@ -758,7 +778,7 @@
     "    invalid_risk = ((df.PREDICTED_SCIENTIFIC_NAME == '') & (df.SPECIMEN_IDENTITY_RISK == 'N'))\n",
     "    \n",
     "    if invalid_risk.any():\n",
-    "        logging.error(f'SPECIMEN_IDENTITY_RISK should be Y in SERIES {df.loc[invalid_risk].index.to_list()}')\n",
+    "        logging.error(f'SPECIMEN_IDENTITY_RISK should be Y in SERIES {index_ranges(df.loc[invalid_risk])}')\n",
     "validate_specimen_id_risk(df)"
    ]
   },
@@ -807,7 +827,7 @@
     "    is_valid_freetext = series.str.match(regex)\n",
     "    if not is_valid_freetext.all():\n",
     "        logging.warning('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
-    "        col, series.loc[~is_valid_freetext].index.to_list(), regex))\n",
+    "        col, index_ranges(series.loc[~is_valid_freetext]), regex))\n",
     "\n",
     "validate_freetext('IDENTIFIED_HOW', df)"
    ]
@@ -837,7 +857,7 @@
     "    \n",
     "    if date_conflict.any():\n",
     "        logging.error(f'{before.name} values are later than {after.name} for SERIES'\n",
-    "                      f' {ctdf[date_conflict].index.to_list()}')\n",
+    "                      f' {index_ranges(ctdf[date_conflict])}')\n",
     "compare_dates(bd, ad)"
    ]
   },
@@ -856,15 +876,27 @@
     "    \n",
     "    df = remove_trailing_spaces(df)\n",
     "    \n",
-    "    df['NAME'] = df['SURNAME'] + ' ' + df['FIRST_NAME']\n",
-    "    is_template_name = (df['NAME'] == 'Darwin Charles R.')\n",
+    "    expected_columns = ['SURNAME','FIRST_NAME','PRIMARY_AFFILIATION','EMAIL ADDRESS','CONTRIBUTION','CONFIRMATION']\n",
+    "    \n",
+    "    if set(df.columns) != set(expected_columns):\n",
+    "        ec = set(df.columns) - set(expected_columns)\n",
+    "        mc = set(expected_columns) - set(df.columns)\n",
+    "        logging.error(f'mismatch in contributor columns: extra {ec}, missing {mc}')\n",
+    "    \n",
+    "    for delim_char in (';','|'):\n",
+    "        for col in df.columns:\n",
+    "            if df[col].str.contains(delim_char, regex=False).any():\n",
+    "                logging.error(f'contributor column {col} contains delimiter \"{delim_char}\"')\n",
+    "    \n",
+    "    df['FULL_NAME'] = df['FIRST_NAME'] + ' ' + df['SURNAME']\n",
+    "    is_template_name = (df['FULL_NAME'] == 'Darwin Charles R.')\n",
     "    if is_template_name.any():\n",
     "        logging.warning('suspect template contributor was not removed')\n",
     "    \n",
-    "    is_dup_name = df['NAME'].duplicated()\n",
+    "    is_dup_name = df['FULL_NAME'].duplicated()\n",
     "    if is_dup_name.any():\n",
     "        logging.error('duplicated names {}'.format(\n",
-    "                df.loc[is_dup_name, 'NAME'].to_list()))\n",
+    "                df.loc[is_dup_name, 'FULL_NAME'].to_list()))\n",
     "    \n",
     "    # TODO update template with underscore in email column\n",
     "    is_valid_email = df['EMAIL ADDRESS'].str.match('^[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}$')\n",
@@ -879,6 +911,35 @@
     "    return df\n",
     "        \n",
     "contrib_df = validate_contributors(anospp_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_sts_cols(df, contrib_df, bioscan=True):\n",
+    "    \n",
+    "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
+    "    \n",
+    "    df['SPECIMEN_ID'] = df['RACK_OR_PLATE_ID'] + '_' + df['TUBE_OR_WELL_ID']\n",
+    "    if df['SPECIMEN_ID'].duplicated().any():\n",
+    "        logging.error('duplicate SPECIMEN_ID: {}'.format(df[df.SPECIMEN_ID.duplicated(), 'SPECIMEN_ID']))\n",
+    "    df['SCIENTIFIC_NAME'] = 'unidentified'\n",
+    "    df.loc[is_blank, 'SCIENTIFIC_NAME'] = 'blank sample'\n",
+    "    df['TAXON_ID'] = '32644'\n",
+    "    df.loc[is_blank, 'TAXON_ID'] = '2582415'\n",
+    "    df['SYMBIONT'] = 'TARGET'\n",
+    "    # add contributors - delimiters checked in validate_contributors\n",
+    "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
+    "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
+    "        contrib_df['EMAIL ADDRESS'] + ';' + \\\n",
+    "        contrib_df['CONTRIBUTION']\n",
+    "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
+    "    \n",
+    "    return df\n",
+    "add_sts_cols(df, contrib_df);"
    ]
   },
   {
