--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -18,9 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "def validate_bioscan(fn, gal='Sanger Institute', template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
     "                     verbose=False, version='2.0', \n",
-    "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors'):\n",
+    "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', write_sts=True):\n",
     "    '''\n",
     "    BIOSCAN partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
@@ -92,7 +92,9 @@
     "    \n",
     "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "    \n",
-    "    df = add_sts_cols(df, contrib_df)\n",
+    "    df = add_sts_cols(df, contrib_df, gal=gal)\n",
+    "    if write_sts:\n",
+    "        write_sts_manifest(df, fn)\n",
     "        \n",
     "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(version))\n",
     "\n",
@@ -100,9 +102,11 @@
     "\n",
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "                      gal='Sanger Institute',\n",
     "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
     "                      verbose=True,\n",
-    "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met')"
+    "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
+    "                      write_sts=False)"
    ]
   },
   {
