--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -869,6 +869,8 @@
    "source": [
     "def validate_contributors(fn, contrib_sheet='TAB 1 Contributors'):\n",
     "    \n",
+    "    logging.info(f'validating contributors in {fn}')\n",
+    "    \n",
     "    df = logging.info('validating contributors in {!r}'.format(fn))\n",
     "    \n",
     "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
@@ -919,7 +921,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_sts_cols(df, contrib_df, bioscan=True):\n",
+    "def add_sts_cols(df, contrib_df, gal, bioscan=True):\n",
     "    \n",
     "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
     "    \n",
@@ -930,7 +932,10 @@
     "    df.loc[is_blank, 'SCIENTIFIC_NAME'] = 'blank sample'\n",
     "    df['TAXON_ID'] = '32644'\n",
     "    df.loc[is_blank, 'TAXON_ID'] = '2582415'\n",
+    "    df['GAL'] = gal\n",
     "    df['SYMBIONT'] = 'TARGET'\n",
+    "    df['REGULATORY_COMPLIANCE'] = 'Y'\n",
+    "    df['HAZARD_GROUP'] = 'HG1'\n",
     "    # add contributors - delimiters checked in validate_contributors\n",
     "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
     "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
@@ -939,7 +944,23 @@
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    \n",
     "    return df\n",
-    "add_sts_cols(df, contrib_df);"
+    "add_sts_cols(df, contrib_df, gal='Sanger Institute');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_sts_manifest(df, input_fn):\n",
+    "    \n",
+    "    output_fn = input_fn.rstrip('.xlsx') + '_for_sts.xlsx'\n",
+    "    \n",
+    "    logging.info(s'writing STS manifest to {output_fn}')\n",
+    "    \n",
+    "    df.to_excel(output_fn, sheet_name='Metadata Entry')\n",
+    "    "
    ]
   },
   {
