make taxid columns addition optional and disable for now

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -70,7 +70,7 @@
     "    validate_values('SAMPLING_LOCATION_SIZE', df[~is_blank], valid_dict)\n",
     "    \n",
     "    # purple cols - validate non-blank samples only\n",
-    "    df = validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
+    "    validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict)\n",
     "    validate_specimen_id_risk(df)\n",
     "    validate_freetext('IDENTIFIED_HOW', df[~is_blank])\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20221216_anospp/Anopheles_Metadata_Manifest_V4.0-Ifakara-Tanzania15122022.xlsx'\n",
+    "fn = '../results/20221216_anospp/GOTZ_Anopheles_Metadata_Manifest_V4.0-Ifakara revised191222.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
