--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -66,8 +66,8 @@
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
     "    date_plat = validate_date('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    compare_dates(before=date_coll, after=date_plat)\n",
-    "    # taxonomy validation adds taxid columns to original dataframe\n",
-    "    df = validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
+    "    # taxonomy validation adds taxid columns to original dataframe - skipping for now\n",
+    "    validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_specimen_id_risk(df)\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict, na_values=[''])\n",
@@ -106,7 +106,7 @@
     "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
     "                      verbose=True,\n",
     "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
-    "                      write_sts=False)"
+    "                      write_sts=True)"
    ]
   },
   {
