--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -606,7 +606,7 @@
    "outputs": [],
    "source": [
     "# TODO hierarchy tests in BIOSCAN\n",
-    "def validate_taxonomy(df, ncbi, na_values = [], anospp=False):\n",
+    "def validate_taxonomy(df, ncbi, na_values = [], anospp=False, add_taxids=False):\n",
     "\n",
     "    logging.info('validating taxonomy against NCBI')\n",
     "    \n",
@@ -750,9 +750,10 @@
     "        except KeyError:\n",
     "            logging.info(f'cannot validate PREDICTED_SCIENTIFIC_NAME for \"{r.species}\", skipping taxonomy consistency check')\n",
     "            continue\n",
-    "            \n",
-    "    for tc in tax_levels.keys():\n",
-    "        df[f'{tc}_TAXID'] = df[tc].replace(tax_info[tax_levels[tc]])\n",
+    "    \n",
+    "    if add_taxids:\n",
+    "        for tc in tax_levels.keys():\n",
+    "            df[f'{tc}_TAXID'] = df[tc].replace(tax_info[tax_levels[tc]])\n",
     "            \n",
     "    return df\n",
     "        \n",
@@ -957,7 +958,7 @@
     "    \n",
     "    output_fn = input_fn.rstrip('.xlsx') + '_for_sts.xlsx'\n",
     "    \n",
-    "    logging.info(s'writing STS manifest to {output_fn}')\n",
+    "    logging.info(f'writing STS manifest to {output_fn}')\n",
     "    \n",
     "    df.to_excel(output_fn, sheet_name='Metadata Entry')\n",
     "    "
