add plate validation with test cases, extend collection methods

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -26,8 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20221116.xlsx', \n",
-    "                    verbose=False, version='4.0', samples_sheet='TAB 2 Metadata Entry'):\n",
+    "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx', \n",
+    "                    verbose=False, version='4.0', samples_sheet='TAB 2 Metadata Entry',\n",
+    "                    contrib_sheet='TAB 1 Contributors'):\n",
     "    '''\n",
     "    ANOSPP partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
@@ -52,12 +53,13 @@
     "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
     "    check_columns(df, template_df)\n",
     "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 5 Data Validation - do not ')\n",
-    "\n",
+    "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
+    "    \n",
     "    # check columns in order of appearance\n",
     "    \n",
     "    # orange cols\n",
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
-    "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
+    "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
@@ -107,7 +109,7 @@
     "    # TODO yield table ready for STS submission\n",
     "    return df\n",
     "\n",
-    "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221116.xlsx'\n",
+    "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
     "template_fn = fn\n",
     "df = validate_anospp(fn, template_fn, verbose=True, samples_sheet='TAB 3 TEST Metadata Entry')"
    ]
