--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -44,10 +44,11 @@
     "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
     "    check_columns(df, template_df)\n",
     "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 4 DO NOT EDIT - Data Valida')\n",
+    "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "\n",
     "    # orange cols\n",
     "    validate_freetext('CATCH_LOT', df, na_values=[])\n",
-    "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
+    "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
@@ -89,8 +90,6 @@
     "    validate_freetext('MISC_METADATA', df)\n",
     "    # IDENTIFIED_BY not checked\n",
     "    # IDENTIFIER_AFFILIATION not checked\n",
-    "    \n",
-    "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "    \n",
     "    df = add_sts_cols(df, contrib_df, gal=gal)\n",
     "    if write_sts:\n",
