--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anospp_fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221116.xlsx'"
+    "anospp_fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "source": [
     "def get_data(fn, sheet='TAB 2 Metadata Entry'):\n",
     "\n",
-    "    logging.info('reading data from {!r}'.format(fn))\n",
+    "    logging.info('reading data from {!r} sheet {!r}'.format(fn, sheet))\n",
     "    \n",
     "    df = pd.read_excel(fn, dtype=str, index_col=0, keep_default_na=False,\n",
     "                       sheet_name=sheet)\n",
@@ -230,17 +230,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_plates_wells(df, plate_col, well_col, bioscan=False):\n",
+    "def validate_contributors(fn, contrib_sheet='TAB 1 Contributors'):\n",
+    "    \n",
+    "    logging.info(f'validating contributors in {fn}')\n",
+    "        \n",
+    "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
+    "                       sheet_name=contrib_sheet)\n",
+    "    \n",
+    "    df = remove_trailing_spaces(df)\n",
+    "    \n",
+    "    expected_columns = ['SURNAME','FIRST_NAME','PRIMARY_AFFILIATION','EMAIL ADDRESS','CONTRIBUTION','CONFIRMATION']\n",
+    "    \n",
+    "    if set(df.columns) != set(expected_columns):\n",
+    "        ec = set(df.columns) - set(expected_columns)\n",
+    "        mc = set(expected_columns) - set(df.columns)\n",
+    "        logging.error(f'mismatch in contributor columns: extra {ec}, missing {mc}')\n",
+    "    \n",
+    "    for delim_char in (';','|'):\n",
+    "        for col in df.columns:\n",
+    "            if df[col].str.contains(delim_char, regex=False).any():\n",
+    "                logging.error(f'contributor column {col} contains delimiter \"{delim_char}\"')\n",
+    "    \n",
+    "    df['FULL_NAME'] = df['FIRST_NAME'] + ' ' + df['SURNAME']\n",
+    "    df['PARTNER_CODE'] = (df['SURNAME'].str.slice(0,2) + df['FIRST_NAME'].str.slice(0,2)).str.upper()\n",
+    "    is_template_name = (df['FULL_NAME'] == 'Darwin Charles R.')\n",
+    "    if is_template_name.any():\n",
+    "        logging.warning('suspect template contributor was not removed')\n",
+    "    \n",
+    "    is_dup_name = df['FULL_NAME'].duplicated()\n",
+    "    if is_dup_name.any():\n",
+    "        logging.error('duplicated names {}'.format(\n",
+    "                df.loc[is_dup_name, 'FULL_NAME'].to_list()))\n",
+    "    \n",
+    "    # TODO update template with underscore in email column\n",
+    "    is_valid_email = df['EMAIL ADDRESS'].str.match('^[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}$')\n",
+    "    if not is_valid_email.all():\n",
+    "        logging.error('invalid email addresses {}'.format(\n",
+    "                df.loc[~is_valid_email, 'EMAIL ADDRESS'].to_list()))\n",
+    "    \n",
+    "    is_confirmed = (df['CONFIRMATION'] == 'YES')\n",
+    "    if not is_confirmed.any():\n",
+    "        logging.error('confirmation lacking for any contributors')\n",
+    "        \n",
+    "    return df\n",
+    "        \n",
+    "contrib_df = validate_contributors(anospp_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_plates_wells(df, contrib_df, plate_col='RACK_OR_PLATE_ID', well_col='TUBE_OR_WELL_ID', bioscan=False):\n",
     "    \n",
     "    # expect only complete 96-well plates\n",
     "    logging.info(f'validating {plate_col} and {well_col}')\n",
     "    \n",
     "    empty_rows = (df[plate_col] == '') | (df[well_col] == '')\n",
-    "    \n",
     "    if empty_rows.any():\n",
     "        logging.error(f'Found and excluded {empty_rows.sum()} empty rows based on {plate_col} and {well_col}')\n",
     "        df = df.loc[~empty_rows]\n",
-    "    \n",
+    "        \n",
+    "    # plate names validation\n",
+    "    plates = df[plate_col].drop_duplicates()\n",
+    "    # match templaet\n",
+    "    plate_name_template = ('[A-Z]{4}-[0-9]{3}' if bioscan else '[A-Z]{4}_[0-9]{3}')\n",
+    "    wrong_plate_names = plates[~plates.str.match(plate_name_template, na='')]\n",
+    "    if len(wrong_plate_names) > 0:\n",
+    "        logging.error(f'plate names {wrong_plate_names.to_list()} do not match template \"{plate_name_template}\"')\n",
+    "    # check plate name prefixes prefixes\n",
+    "    if bioscan:\n",
+    "        # todo read partners table\n",
+    "        pass\n",
+    "    else:\n",
+    "        plate_prefixes = plates.str.slice(0,4)\n",
+    "        unknown_prefixes = (~plate_prefixes.isin(contrib_df['PARTNER_CODE']))\n",
+    "        if unknown_prefixes.any():\n",
+    "            logging.error(f'plate name prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
+    "        \n",
     "    # add 96-well plate well IDs to validation\n",
     "    row_id = list('ABCDEFGH')\n",
     "    col_id = range(1,13)\n",
@@ -267,9 +336,11 @@
     "                elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
     "                                 'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
     "                    pdf[col].iloc[-1]=''\n",
+    "        # check for well duplicates\n",
     "        dup_wells =  pdf[well_col].duplicated()\n",
     "        if dup_wells.any():\n",
     "            logging.error(f'duplicate {well_col} for plate {plate}: {pdf.loc[dup_wells, well_col].unique()}')\n",
+    "        # check for non A1...H12 wells\n",
     "        observed_wells = set(pdf[well_col])\n",
     "        expected_wells = set(expected_wells)\n",
     "        if observed_wells != expected_wells:\n",
@@ -279,12 +350,13 @@
     "    \n",
     "    if bioscan:\n",
     "        df = pd.concat(pdfs)\n",
-    "    \n",
     "    logging.info(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    return df\n",
     "        \n",
-    "df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
+    "df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
    ]
   },
   {
@@ -868,67 +940,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_contributors(fn, contrib_sheet='TAB 1 Contributors'):\n",
-    "    \n",
-    "    logging.info(f'validating contributors in {fn}')\n",
-    "    \n",
-    "    df = logging.info('validating contributors in {!r}'.format(fn))\n",
-    "    \n",
-    "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
-    "                       sheet_name=contrib_sheet)\n",
-    "    \n",
-    "    df = remove_trailing_spaces(df)\n",
-    "    \n",
-    "    expected_columns = ['SURNAME','FIRST_NAME','PRIMARY_AFFILIATION','EMAIL ADDRESS','CONTRIBUTION','CONFIRMATION']\n",
-    "    \n",
-    "    if set(df.columns) != set(expected_columns):\n",
-    "        ec = set(df.columns) - set(expected_columns)\n",
-    "        mc = set(expected_columns) - set(df.columns)\n",
-    "        logging.error(f'mismatch in contributor columns: extra {ec}, missing {mc}')\n",
-    "    \n",
-    "    for delim_char in (';','|'):\n",
-    "        for col in df.columns:\n",
-    "            if df[col].str.contains(delim_char, regex=False).any():\n",
-    "                logging.error(f'contributor column {col} contains delimiter \"{delim_char}\"')\n",
-    "    \n",
-    "    df['FULL_NAME'] = df['FIRST_NAME'] + ' ' + df['SURNAME']\n",
-    "    is_template_name = (df['FULL_NAME'] == 'Darwin Charles R.')\n",
-    "    if is_template_name.any():\n",
-    "        logging.warning('suspect template contributor was not removed')\n",
-    "    \n",
-    "    is_dup_name = df['FULL_NAME'].duplicated()\n",
-    "    if is_dup_name.any():\n",
-    "        logging.error('duplicated names {}'.format(\n",
-    "                df.loc[is_dup_name, 'FULL_NAME'].to_list()))\n",
-    "    \n",
-    "    # TODO update template with underscore in email column\n",
-    "    is_valid_email = df['EMAIL ADDRESS'].str.match('^[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}$')\n",
-    "    if not is_valid_email.all():\n",
-    "        logging.error('invalid email addresses {}'.format(\n",
-    "                df.loc[~is_valid_email, 'EMAIL ADDRESS'].to_list()))\n",
-    "    \n",
-    "    is_confirmed = (df['CONFIRMATION'] == 'YES')\n",
-    "    if not is_confirmed.any():\n",
-    "        logging.error('confirmation lacking for any contributors')\n",
-    "        \n",
-    "    return df\n",
-    "        \n",
-    "contrib_df = validate_contributors(anospp_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def add_sts_cols(df, contrib_df, gal, bioscan=True):\n",
     "    \n",
     "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
     "    \n",
     "    df['SPECIMEN_ID'] = df['RACK_OR_PLATE_ID'] + '_' + df['TUBE_OR_WELL_ID']\n",
     "    if df['SPECIMEN_ID'].duplicated().any():\n",
-    "        logging.error('duplicate SPECIMEN_ID: {}'.format(df[df.SPECIMEN_ID.duplicated(), 'SPECIMEN_ID']))\n",
+    "        logging.error('duplicate SPECIMEN_ID: {}'.format(df.loc[df.SPECIMEN_ID.duplicated(), 'SPECIMEN_ID']))\n",
     "    df['SCIENTIFIC_NAME'] = 'unidentified'\n",
     "    df.loc[is_blank, 'SCIENTIFIC_NAME'] = 'blank sample'\n",
     "    df['TAXON_ID'] = '32644'\n",
