plate prefixes validation for bioscan

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -301,14 +301,15 @@
     "    if len(wrong_plate_names) > 0:\n",
     "        logging.error(f'plate names {wrong_plate_names.to_list()} do not match template \"{plate_name_template}\"')\n",
     "    # check plate name prefixes prefixes\n",
+    "    plate_prefixes = plates.str.slice(0,4)\n",
     "    if bioscan:\n",
     "        # todo read partners table\n",
-    "        pass\n",
+    "        partners_df = pd.read_csv('../data/bioscan_partners.tsv', sep='\\t', dtype=str)\n",
+    "        unknown_prefixes = (~plate_prefixes.isin(partners_df['partner_code']))\n",
     "    else:\n",
-    "        plate_prefixes = plates.str.slice(0,4)\n",
     "        unknown_prefixes = (~plate_prefixes.isin(contrib_df['PARTNER_CODE']))\n",
-    "        if unknown_prefixes.any():\n",
-    "            logging.error(f'plate name prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
+    "    if unknown_prefixes.any():\n",
+    "        logging.error(f'plate name prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
     "        \n",
     "    # add 96-well plate well IDs to validation\n",
     "    row_id = list('ABCDEFGH')\n",
