add validation version to sts output filename

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "def validate_bioscan(fn, gal='Sanger Institute', template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
-    "                     verbose=False, version='2.0', \n",
+    "                     verbose=False, bioscan_version='2.0', validation_version='0.1.0',\n",
     "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', write_sts=True):\n",
     "    '''\n",
     "    BIOSCAN partner manifest validation\n",
@@ -28,7 +28,7 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.info(f'# started validate_bioscan_partner_manifest_v.{version}')\n",
+    "    logging.info(f'# started validate_bioscan_partner_manifest_v.{bioscan_version}')\n",
     "    logging.warning(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
@@ -93,9 +93,9 @@
     "    \n",
     "    df = add_sts_cols(df, contrib_df, gal=gal)\n",
     "    if write_sts:\n",
-    "        write_sts_manifest(df, fn)\n",
+    "        write_sts_manifest(df, fn, validation_version)\n",
     "        \n",
-    "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(version))\n",
+    "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(bioscan_version))\n",
     "\n",
     "    return df\n",
     "\n",
