--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -973,9 +973,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_sts_manifest(df, input_fn):\n",
+    "def write_sts_manifest(df, input_fn, validation_version):\n",
     "    \n",
-    "    output_fn = input_fn.rstrip('.xlsx') + '_for_sts.xlsx'\n",
+    "    output_fn = input_fn.rstrip('.xlsx') + '_' + validation_version + '_for_sts.xlsx'\n",
     "    \n",
     "    logging.info(f'writing STS manifest to {output_fn}')\n",
     "    \n",
